fix overlapping charts

--- a/modules/openlmis-web/src/main/webapp/public/less/report.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/report.less
@@ -297,3 +297,7 @@ table.compact {
 .outline{
   clear: both;
 }
+
+.stock-status-chart-container{
+  height: 410px;
+}
